✏️footer,example lesson

--- a/Architecture/Stylesheet.css
+++ b/Architecture/Stylesheet.css
@@ -30,7 +30,8 @@ html,body{
     margin-top: -100px ;
     clear: both;
     /*margin-left: auto;
-    margin-right: auto;*/
+    mar
+    gin-right: auto;*/
 }
 a{
     color:rgb(143, 228, 140);
