--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -32,6 +32,10 @@ html,body{
     /*margin-left: auto;
     margin-right: auto;*/
 }
+header{
+    background-color: #36343d;
+    color: rgb(143, 228, 140);
+}
 a{
     color:rgb(143, 228, 140);
 }
